samples/_failures_safe/1761322452_219bbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d6534e8.c: In function ‘get_matrix_dimensions’:
./samples/SAFE/__tmp_7d6534e8.c:128:31: error: expected ‘)’ at end of input
  128 |     if (scanf("%d", cols) != 1
      |        ~                      ^
      |                               )
./samples/SAFE/__tmp_7d6534e8.c:128:5: error: expected declaration or statement at end of input
  128 |     if (scanf("%d", cols) != 1
      |     ^~
